--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@
     transform: rotate(360deg);
   }
 }
+.login {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
